[package]
name = "sorting_explorer"
version = "0.1.0"
description = "An exploration of various sorting algorithms"
authors = ["Federico Stra <stra.federico@gmail.com>"]
license = "MIT"
edition = "2018"
categories = ["algorithms"]
keywords = ["algorithms", "sorting", "statistics", "education"]
repository = "https://github.com/FedericoStra/sorting_explorer"
homepage = "https://github.com/FedericoStra/sorting_explorer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.8.0"

[[bench]]
name = "bench"
harness = false
